--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,17 @@
     </plugins>
   </build>
   
+  <repositories>
+    <repository>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <name>Central Repository</name>
+      <url>https://repo.maven.apache.org/maven2</url>
+    </repository>
+  </repositories>
+  
   <dependencies>
   
   	<!-- 서블릿 버전4 의존성 설정 -->
