--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,12 +6,26 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   
+  <!-- ServletContextListener 설정 -->
+  <listener>
+  	<listener-class>com.mycompany.servletjsp.context.contextLoaderListener</listener-class>
+  </listener>
+  <context-param>
+  	<param-name>contextConfigLocation</param-name>
+  	<param-value>classpath:spring/root/*.xml</param-value>
+  </context-param>
+  
   
   <!-- DispatherServlet 설정 -->
   <servlet>
   	<servlet-name>DispatcherServlet</servlet-name>
   	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-  	<!-- 웹앱 실행 시,  -->
+  	<!-- Spring 설정 파일을 DispatcherServlet에게 제공 -->
+  	<init-param>
+  		<param-name>contextConfigLocation</param-name>
+  		<param-value>classpath:spring/dispatcher/*.xml</param-value>
+  	</init-param>
+  	<!-- 웹앱 실행 시, 서블릿 객체 생성-->
   	<load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
@@ -19,5 +33,21 @@
   	<!-- 모든 요청을 DispatherServlet이 처리 -->
   	<url-pattern>/</url-pattern>
   </servlet-mapping>
+  
+  
+  <!-- 필터 클래스 설정 -->
+  <filter>
+  	<filter-name>CharacterEncodingFilter</filter-name>
+  	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+  	<init-param>
+  		<param-name>encoding</param-name>
+  		<param-value>UTF-8</param-value>
+  	</init-param>
+  </filter>
+  <!-- 요청하는 모든 URL에 필터를 적용하여 전처리 후, DispatcherSevlet을 실행한다. -->
+  <filter-mapping>
+  	<filter-name>CharacterEncodingFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
   
 </web-app>
