--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   
   <!-- ServletContextListener 설정 -->
   <listener>
-  	<listener-class>com.mycompany.servletjsp.context.contextLoaderListener</listener-class>
+  	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
   <context-param>
   	<param-name>contextConfigLocation</param-name>
