--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,21 @@
 	    <version>5.3.29</version>
 	</dependency>
 	
+	<!-- json 의존성 설정 -->
+	<!-- Ch02에서 자바코드를 JSON으로 변환 실습, JSON 파싱에서 이용할 떄 사용하는 라이브러리 -->
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20230618</version>
+	</dependency>
 	
+	<!-- jackson-databind 의존성 설정 -->
+	<!-- Ch02에서 자바 객체를 JSON객체로 변환 실습, JSON을 자바 객체로 변환할 때 내부적으로 사용되는 라이브러리 -->
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.15.2</version>
+	</dependency>
 	
 	
   </dependencies>
