--- a/pom.xml
+++ b/pom.xml
@@ -112,5 +112,14 @@
 	</dependency>
 	
 	
+	<!-- Ch04 @Validation 구현을 위한 javax.validation 의존성 설정 -->
+	<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+	<dependency>
+	    <groupId>javax.validation</groupId>
+	    <artifactId>validation-api</artifactId>
+	    <version>2.0.1.Final</version>
+	</dependency>
+	
+	
   </dependencies>
 </project>
