--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,18 @@
   	</init-param>
   	<!-- 웹앱 실행 시, 서블릿 객체 생성-->
   	<load-on-startup>1</load-on-startup>
+  	
+  	<!-- MultipartResolver Pashing Setting Code -->
+  	<multipart-config>
+  		<!-- 임시 파일 디렉토리 설정 -->
+  		<location>C:/Temp</location>
+  		<!-- file 1개당 크기 제한 설정 -->
+  		<max-file-size>20971520</max-file-size>
+  		<!-- 요청 시 최대 용량 설정 -->
+  		<max-request-size>104857600</max-request-size>
+  		<!-- 임시 파일 용량(임계값) 제한 -->
+  		<file-size-threshold>1048576</file-size-threshold>
+  	</multipart-config>
   </servlet>
   <servlet-mapping>
   	<servlet-name>DispatcherServlet</servlet-name>
