Ch10 Execution Handling - Spring 예외 처리 기법

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,13 @@
   		<param-name>contextConfigLocation</param-name>
   		<param-value>classpath:spring/dispatcher/*.xml</param-value>
   	</init-param>
+  	
+  	<!-- Ch10. 404 처리를 @ControllerAdvice에 처리하도록 설정 -->
+  	<init-param>
+  		<param-name>throwExceptionIfNoHandlerFound</param-name>
+  		<param-value>true</param-value>
+  	</init-param>
+  	
   	<!-- 웹앱 실행 시, 서블릿 객체 생성-->
   	<load-on-startup>1</load-on-startup>
   	
