--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,16 @@
 	</dependency>
 	
 	<!-- Ch13. MyBatis -->
-	
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis</artifactId>
+	    <version>3.5.13</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis-spring</artifactId>
+	    <version>2.1.1</version>
+	</dependency>
 	
 	
   </dependencies>
