--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,13 @@
 	    <version>2.1.1</version>
 	</dependency>
 	
+	<!-- Ch13. Password Encoder를 사용하기 위한 라이브러리 -->
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-core</artifactId>
+	    <version>5.5.8</version>
+	</dependency>
+	
 	
   </dependencies>
 </project>
